test/__snapshots__/index.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rust-native-wasm-loader loads a cargo-web project: dependencies 1`] = `
Set {
  "test/fixtures/mystdweblib/Cargo.toml",
  "test/fixtures/mystdweblib/src/main.rs",
  "test/fixtures/stdweb.js",
}
`;

exports[`rust-native-wasm-loader loads a cargo-web project: errors 1`] = `Array []`;

exports[`rust-native-wasm-loader loads a cargo-web project: output 1`] = `"Hello, World!"`;

exports[`rust-native-wasm-loader loads a cargo-web project: warnings 1`] = `Array []`;

exports[`rust-native-wasm-loader loads a simple cargo project with errors: dependencies 1`] = `
Set {
  "test/fixtures/error.js",
  "test/fixtures/myerrorlib/Cargo.toml",
  "test/fixtures/myerrorlib/src/lib.rs",
}
`;

exports[`rust-native-wasm-loader loads a simple cargo project with errors: errors 1`] = `
Array [
  "Module build failed: Error: cargo build failed",
  "error: aborting due to previous error

",
  "error[E0277]: cannot add \`&str\` to \`{integer}\`
 --> src/lib.rs:2:7
  |
2 |     1 + \\"two\\"
  |       ^ no implementation for \`{integer} + &str\`
  |
  = help: the trait \`std::ops::Add<&str>\` is not implemented for \`{integer}\`

",
]
`;

exports[`rust-native-wasm-loader loads a simple cargo project with errors: failure 1`] = `"Module build failed: Error: cargo build failed"`;

exports[`rust-native-wasm-loader loads a simple cargo project with errors: warnings 1`] = `Array []`;

exports[`rust-native-wasm-loader loads a simple cargo project with warnings: dependencies 1`] = `
Set {
  "test/fixtures/mywarninglib/Cargo.toml",
  "test/fixtures/mywarninglib/src/lib.rs",
  "test/fixtures/warning.js",
}
`;

exports[`rust-native-wasm-loader loads a simple cargo project with warnings: errors 1`] = `Array []`;

exports[`rust-native-wasm-loader loads a simple cargo project with warnings: output 1`] = `1`;

exports[`rust-native-wasm-loader loads a simple cargo project with warnings: warnings 1`] = `
Array [
  "warning: unused variable: \`b\`
 --> src/lib.rs:2:20
  |
2 | pub fn add(a: i32, b: i32) -> i32 { // Warning: unused variable b
  |                    ^ help: consider using \`_b\` instead
  |
  = note: #[warn(unused_variables)] on by default

",
]
`;

exports[`rust-native-wasm-loader loads a simple cargo project with wasm-gc: dependencies 1`] = `
Set {
  "test/fixtures/myrustlib/Cargo.toml",
  "test/fixtures/myrustlib/src/add.rs",
  "test/fixtures/myrustlib/src/lib.rs",
  "test/fixtures/simple.js",
}
`;

exports[`rust-native-wasm-loader loads a simple cargo project with wasm-gc: errors 1`] = `Array []`;

exports[`rust-native-wasm-loader loads a simple cargo project with wasm-gc: output 1`] = `3`;

exports[`rust-native-wasm-loader loads a simple cargo project with wasm-gc: warnings 1`] = `Array []`;

exports[`rust-native-wasm-loader loads a simple cargo project: dependencies 1`] = `
Set {
  "test/fixtures/myrustlib/Cargo.toml",
  "test/fixtures/myrustlib/src/add.rs",
  "test/fixtures/myrustlib/src/lib.rs",
  "test/fixtures/simple.js",
}
`;

exports[`rust-native-wasm-loader loads a simple cargo project: errors 1`] = `Array []`;

exports[`rust-native-wasm-loader loads a simple cargo project: output 1`] = `3`;

exports[`rust-native-wasm-loader loads a simple cargo project: warnings 1`] = `Array []`;

exports[`rust-native-wasm-loader loads a wasm-bindgen project with typescript support and a type error: dependencies 1`] = `
Set {
  "node_modules/@types/node/index.d.ts",
  "node_modules/@types/node/inspector.d.ts",
  "node_modules/typescript/lib/lib.d.ts",
  "test/fixtures/mywasmbindgenlib/src/lib.rs",
  "test/fixtures/mywasmbindgenlib/target/wasm32-unknown-unknown/release/mywasmbindgenlib.d.ts",
  "test/fixtures/mywasmbindgenlib/target/wasm32-unknown-unknown/release/mywasmbindgenlib.js",
  "test/fixtures/mywasmbindgenlib/target/wasm32-unknown-unknown/release/mywasmbindgenlib_wasm.js",
  "test/fixtures/wasmbindgen-type-error.ts",
}
`;

exports[`rust-native-wasm-loader loads a wasm-bindgen project with typescript support and a type error: errors 1`] = `
Array [
  "[90m[tsl] [39m[1m[31mERROR[39m[22m[1m[31m in [39m[22m[1m[36mtest/fixtures/wasmbindgen-type-error.ts(5,10)[39m[22m
[1m[31m      TS2554: Expected 2 arguments, but got 3.[39m[22m",
]
`;

exports[`rust-native-wasm-loader loads a wasm-bindgen project with typescript support and a type error: output 1`] = `"Hello, World!"`;

exports[`rust-native-wasm-loader loads a wasm-bindgen project with typescript support and a type error: warnings 1`] = `Array []`;

exports[`rust-native-wasm-loader loads a wasm-bindgen project with typescript support: dependencies 1`] = `
Set {
  "node_modules/@types/node/index.d.ts",
  "node_modules/@types/node/inspector.d.ts",
  "node_modules/typescript/lib/lib.d.ts",
  "test/fixtures/mywasmbindgenlib/src/lib.rs",
  "test/fixtures/mywasmbindgenlib/target/wasm32-unknown-unknown/release/mywasmbindgenlib.d.ts",
  "test/fixtures/mywasmbindgenlib/target/wasm32-unknown-unknown/release/mywasmbindgenlib.js",
  "test/fixtures/mywasmbindgenlib/target/wasm32-unknown-unknown/release/mywasmbindgenlib_wasm.js",
  "test/fixtures/wasmbindgen.ts",
}
`;

exports[`rust-native-wasm-loader loads a wasm-bindgen project with typescript support: errors 1`] = `Array []`;

exports[`rust-native-wasm-loader loads a wasm-bindgen project with typescript support: output 1`] = `"Hello, World!"`;

exports[`rust-native-wasm-loader loads a wasm-bindgen project with typescript support: warnings 1`] = `Array []`;

exports[`rust-native-wasm-loader loads a wasm-bindgen project: dependencies 1`] = `
Set {
  "test/fixtures/mywasmbindgenlib/Cargo.toml",
  "test/fixtures/mywasmbindgenlib/src/lib.rs",
  "test/fixtures/mywasmbindgenlib/target/wasm32-unknown-unknown/release/mywasmbindgenlib.js",
  "test/fixtures/mywasmbindgenlib/target/wasm32-unknown-unknown/release/mywasmbindgenlib_wasm.js",
  "test/fixtures/wasmbindgen.js",
}
`;

exports[`rust-native-wasm-loader loads a wasm-bindgen project: errors 1`] = `Array []`;

exports[`rust-native-wasm-loader loads a wasm-bindgen project: output 1`] = `""`;

exports[`rust-native-wasm-loader loads a wasm-bindgen project: warnings 1`] = `Array []`;
